--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,11 @@
 remote_theme: "mmistakes/minimal-mistakes@4.23.0"
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
+# Site Settings
+#
+locale                   : "en-US"
+title                    : "Carlos M. Guio"
+subtitle                 : "My personal web"
+name                     : "Carlos M. Guío"
+description              : "Data science and environmental stuff"
+url                      :  https://cmguiob.github.io
