--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 #Theme settings
 #
 remote_theme: "mmistakes/minimal-mistakes@4.23.0"
-minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 #
